@@ -15,6 +15,8 @@ not yet  BJH  Release 10.47.00
 
               giftopnm: improve efficiency.
 
+              libppmd: Add ppmd_point-based functions (ppmd_linep(), etc).
+
               pnmremap: fix: -firstisdefault uses an arbitrary color from the
               map as default.
 
@@ -32,6 +34,9 @@ not yet  BJH  Release 10.47.00
               ppmpat: fix crash when width or height is zero.
 
               ppmpat: fix wrong output with -poles.
+
+              libppmd (ppmpat, ppmdraw): Fix various out of bounds number
+              problems.
 
               ilbmtoppm: fix some bug in interpreting ILBM input.
               (due to wrong pm_uintFromBigend16()).  From 10.46.
